--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +24,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* ------------- */
+
+div.nav-menu {
+  padding: 25px;
+}
+
+div.nav-menu a {
+  padding-left:  20px;
+  padding-right: 20px;
+}
+
+.login-form {
+  padding: 60px;
+  margin: 40px;
+  border: 2px solid #000;
 }
