--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,14 +28,21 @@
 
 /* ------------- */
 
+h2, p {
+  margin: 0;
+  line-height: 150%;
+}
+
 div.nav-menu {
   padding: 25px;
   text-align: right;
+  height: 87px;
 }
 
 div.nav-menu a {
   padding-left:  20px;
   padding-right: 20px;
+  line-height: 94px;
 }
 
 div.nav-menu img.logo {
@@ -46,4 +53,45 @@ div.nav-menu img.logo {
   padding: 60px;
   margin: 40px;
   border: 2px solid #000;
+  height: 350px;
+  width: 400px;
+}
+
+.login-form input {
+  width: 100%;
+}
+
+.new-sitter-form {
+  padding: 60px;
+  margin: 40px;
+  border: 2px solid #000;
+}
+.new-sitter-form input {
+  padding: 5px;
+  width: 100%;
+  display: inline-block;
+}
+
+.all-sitters-container {
+  margin-left: 25px;
+  margin-right: 25px;
+  outline: solid 2px red;
+  height: 500px;
+}
+
+.sitter-box {
+  outline: solid 1px #000;
+  padding: 25px;
+  width: 200px;
+  height: 330px;
+  float: left;
+  margin: 15px;
+}
+
+div.review-container {
+  outline: solid 1px blue;
+  height: 80px;
+  overflow: hidden;
+  margin-top: 10px;
+  /* padding: 10px; */
 }
