add oneSitter styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,3 +95,11 @@ div.review-container {
   margin-top: 10px;
   /* padding: 10px; */
 }
+
+.one-sitter-box {
+  outline: solid 1px purple;
+  padding: 25px 20%;
+  margin-left: 25px;
+  margin-right: 25px;
+  text-align: center;
+}
