--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,11 +66,13 @@ div.nav-menu img.logo {
 }
 
 div.review-container {
-  outline: solid 1px blue;
-  height: 100px;
+  /* outline: solid 1px rgb(189, 189, 189); */
+  border-radius: 2px;
+  height: 90px;
   overflow: hidden;
-  margin-top: 10px;
-  /* padding: 10px; */
+  margin-top: 20px;
+  padding: 15px;
+  box-shadow: 2px 2px 6px rgb(202, 201, 201);
 }
 
 .one-sitter-box {
@@ -144,6 +146,12 @@ div.review-container {
   padding-top: 5px;
 }
 
+.rating-stars-ind {
+  padding-bottom: 5px;
+  padding-top: 5px;
+  block-size: 30px;
+}
+
 #review {
   width: 100%;
   height: 150px;
@@ -157,4 +165,16 @@ div.review-container {
 }
 #review:focus {
   outline: solid 1px #7CA7BE;
+}
+
+.edit-container {
+  position: absolute;
+}
+
+.edit-icon {
+  block-size: 20px;
+  padding: 2px 0 2px 2px;
+  position: absolute;
+  top: -80px;
+  right: -210px;
 }
