--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,8 +33,17 @@ h1, h2, p {
   line-height: 150%;
 }
 
+h2 {
+  font-size: 15px;
+  padding-bottom: 5px;
+}
+
+p {
+  font-size: 12px;
+}
+
 div.nav-menu {
-  padding: 25px;
+  padding: 10px 10%;
   text-align: right;
   height: 87px;
 }
@@ -49,20 +58,32 @@ div.nav-menu img.logo {
   float: left;
 }
 
+.page-title {
+  color: #7CA7BE;
+  text-align: center;
+  font-weight: 300;
+  padding-bottom: 10px;
+}
+
 .all-sitters-container {
-  margin-left: 25px;
-  margin-right: 25px;
-  outline: solid 2px red;
+  margin-left: 10%;
+  margin-right: 10%;
   height: 500px;
 }
 
 .sitter-box {
-  outline: solid 1px #000;
-  padding: 25px;
-  width: 200px;
-  height: 330px;
+  /* outline: solid 1px #000; */
+  box-shadow: 2px 2px 6px rgb(202, 201, 201);
+  padding: 20px;
+  width: 150px;
+  height: 90px;
   float: left;
-  margin: 15px;
+  margin: 10px;
+}
+
+.review-link {
+  padding-top: 8px;
+  text-decoration: none;
 }
 
 div.review-container {
@@ -98,9 +119,10 @@ div.review-container {
 }
 
 .new-sitter-form {
-  padding: 60px;
-  margin: 40px;
-  border: 2px solid #000;
+  padding: 20px 60px;
+  margin-left: 30%;
+  margin-right: 30%;
+  box-shadow: 2px 2px 6px rgb(202, 201, 201);
 }
 .new-sitter-form input {
   padding: 5px;
@@ -111,7 +133,7 @@ div.review-container {
 .new-rating-form {
   padding: 20px;
   margin: 40px 25%;
-  border: 2px solid #000;
+  box-shadow: 2px 2px 6px rgb(202, 201, 201);
 }
 .new-rating-form input {
   padding: 5px;
@@ -177,4 +199,10 @@ div.review-container {
   position: absolute;
   top: -80px;
   right: -210px;
+}
+
+#delete-rating {
+  color: red;
+  cursor: pointer;
+  float: right;
 }
