--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,14 +42,18 @@ p {
   font-size: 12px;
 }
 
+#update {
+  font-size: 20px;
+  color: #7CA7BE;
+  text-align: center;
+  font-weight: 300;
+  padding-bottom: 10px;
+}
+
 div.nav-menu {
   padding: 10px 10%;
   height: 110px;
 }
-
-/* .nav-menu a:active {
-  border-bottom: 2px solid #7CA7BE;
-} */
 
 .float-right {
   float: right;
@@ -67,11 +71,7 @@ div.nav-menu a, button {
   color: #000;
 }
 
-/* a[aria-current="page"] {
-  border-bottom: 2px solid #7CA7BE;
-} */
-
-.active {
+div.nav-menu a.active {
   border-bottom: 2px solid #7CA7BE;
 }
 
@@ -84,8 +84,7 @@ a.logo {
   height: 60px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -20px;
-  padding-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 #nav-logout {
@@ -127,16 +126,15 @@ a.logo {
   border-radius: 6px;
 }
 
-p.review-link {
+.review-link-p {
   padding-top: 10px;
-  text-decoration: none;
-  border-bottom-style: none;
 }
 
-/* .review-link {
+.review-link {
   padding-top: 10px;
   text-decoration: none;
-} */
+  color: #7CA7BE;
+}
 
 div.review-container {
   /* outline: solid 1px rgb(189, 189, 189); */
@@ -160,7 +158,7 @@ div.review-container {
 /* -------------------------------------- Forms */
 
 .login-form {
-  padding: 40px;
+  padding: 20px 40px;
   margin: 40px auto;
   /* border: 2px solid #000; */
   height: auto;
@@ -194,18 +192,12 @@ div.review-container {
 }
 
 .new-sitter-form {
-  padding: 40px 60px;
+  padding: 30px 40px 15px 40px;
   width: 350px;
   margin-left: auto;
   margin-right: auto;
-  /* margin: 20px 25%; */
   box-shadow: 2px 2px 6px rgb(202, 201, 201);
   border-radius: 6px;
-}
-
-.landing-heading {
-  font-size: 22px;
-  padding-bottom: 6px;
 }
 
 .new-sitter-form input {
@@ -236,6 +228,10 @@ div.review-container {
   display: inline-block;
 }
 
+.rating-labels {
+  font-size: 16px;
+}
+
 .submit-button {
   color: #fff;
   background-color: #7CA7BE;
@@ -243,6 +239,21 @@ div.review-container {
   border-radius: 2px;
   border: none;
   cursor: pointer;
+  margin: 10px 0 0 0;
+}
+
+.submit-button-landing {
+  color: #fff;
+  background-color: #7CA7BE;
+  font-size: 16px;
+  border-radius: 2px;
+  border: none;
+  cursor: pointer;
+  margin-top: 10px;
+  display: block;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .submit-button:hover {
@@ -319,6 +330,8 @@ div.review-container {
   color: red;
   cursor: pointer;
   float: right;
+  margin-top: 22px;
+  font-size: 14px;
 }
 
 #add-rating-btn {
@@ -326,7 +339,9 @@ div.review-container {
 }
 
 .login-error {
+  padding-top: 15px;
+}
+.login-error p {
   color: red;
-  float: right;
-
+  text-align: center;
 }
