--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,7 +105,7 @@ a.logo {
 
 div.review-container {
   border-radius: 2px;
-  height: 90px;
+  height: 115px;
   width: 250px;
   overflow: hidden;
   margin-top: 20px;
@@ -114,6 +114,11 @@ div.review-container {
   padding: 15px;
   box-shadow: 2px 2px 6px rgb(202, 201, 201);
   border-radius: 6px;
+}
+
+div.review-container p {
+  height: 70px;
+  overflow: scroll;
 }
 
 .one-sitter-box {
@@ -281,7 +286,7 @@ div.review-container {
   block-size: 20px;
   padding: 2px 0 2px 2px;
   position: absolute;
-  top: -70px;
+  top: -120px;
   right: -130px;
 }
 
